--- a/leapYear.html
+++ b/leapYear.html
@@ -10,20 +10,61 @@
 </head>
 <body>
   <div class="container">
-    <h1>Leap year detector</h1>
-
+    <h1>Apu's Leap year detector</h1>
     <form id="leap-year">
       <div class="form-group">
         <label for="year">Enter a year and find out if it's a leap year:</label>
         <input id="year" type="text">
       </div>
-
       <button type="submit" class="btn">Find out!</button>
     </form>
-
     <div id="result">
       <p><span class="year"></span> is <span class="not"></span> a leap year.</p>
     </div>
   </div>
+      <div class="row character-row">
+    <div class="col-md-3">
+        <div id="apu">
+      <div class="head">
+          <div class="hair hair1"></div>
+          <div class="hair hair2"></div>
+          <div class="body head-main1"></div>
+          <div class="circle body ear">
+        <div class="no-border circle inner1"></div>
+        <div class="no-border circle inner2"></div>
+          </div>
+          <div class="no-border body neck1"></div>
+          <div class="hair sideburn">
+        <div class="no-border hair clip"></div>
+          </div>
+          <div class="circle body eyebrow"></div>
+          <div class="circle body eyebag1"></div>
+          <div class="circle left-eye eye">
+        <div class="no-border circle pupil"></div>
+        <div class="no-border body eyelid-top"></div>
+        <div class="no-border body eyelid-bottom"></div>
+          </div>
+          <div class="circle right-eye eye">
+        <div class="no-border circle pupil"></div>
+        <div class="no-border body eyelid-top"></div>
+        <div class="no-border body eyelid-bottom"></div>
+          </div>
+          <div class="circle body mouth2"></div>
+          <div class="body tooth tooth1"></div>
+          <div class="body tooth tooth2"></div>
+          <div class="body tooth tooth3"></div>
+          <div class="body tooth tooth4"></div>
+          <div class="circle body mouth1"></div>
+          <div class="no-border circle eyebag2"></div>
+          <div class="no-border circle body mouth3"></div>
+          <div class="no-border body neck2"></div>
+          <div class="body nose-tip"></div>
+          <div class="no-border body nose"></div>
+          <div class="no-border moustache moustache-left"></div>
+          <div class="no-border moustache moustache-right"></div>
+      </div>
+        </div>        
+    </div>
+      </div>
 </body>
 </html>
